frontend/tests/cases/positive/if0.gr
if0 : forall (a : Type) . Int -> a [0..1] -> a [0..1] -> a
if0 0 [x] [y] = x;
if0 _ [x] [y] = y
