frontend/tests/cases/negative/hsup/pushPolyLNL.gr
bad : forall {a : Type, b : Type, n : LNL} . (a , b) [n] -> (a [n], b [n])
bad [(x, y)] = ([x], [y])